# rsrt

./: Cargo.toml  README.md
example/cornell/: setup.rs  setup_diffuse.rs
example/image_texture/: setup.rs
example/lights/: setup.rs
example/motion_blur/: setup.rs
src/: lib.rs  math.rs
src/mtl/: dielectric.rs  isotropic.rs  lambertian.rs  light_source.rs  metal.rs  mod.rs  scatterable.rs  utils.rs
src/strategy/: bucket.rs  mod.rs
src/tex/: mod.rs  texture.rs
src/trace/: bvh.rs  camera.rs  hit.rs  material.rs  mod.rs  ray.rs  sphere.rs
src/utils/: rng.rs
